k8s/DeploymentManifest.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: my-web-deployment
  labels:
    app: myk8s-application
    env : prod
    owner: VMZ
  spec:
#    replicas: 3
    selector:
      matchlabels:
        project: kgb
    template:
      metadata:
        labels:
          project: kgb
      containers:
        - name: kgb-web
        image: dreaddevil/k8sphp:latest
        ports:
          - containerPort: 80
