k8s/PodManifest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-web
  labels:
    env   : prod
    app   : mail
    tier  : frontend
    owner : VMZ
spec:
  containers:
    - name: container-apache
      image: httpd:latest
      ports:
       - containerPort: 80
