k8s/ServicesManifest.yaml
apiVersion: v1
kind: Service
type: LoadBalancer
metadata:
  name: my-single-pod-Service
  labels:
    env: prod
    owner: ZVM
spec:
  selector:
    project: kgb #selecting PODs with this labels
  ports:
    - name: app-listener
    protocol: TCP
    port: 80 #Port on Load Balancer
    targetport: 80 #Port on POD
    - name: app-listener2
    protocol: TCP
    port: 8080
    targetport: 8080
