k8s/Ingress-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts

spec:
  rules:
    - host: www.test1.net
      http:
        paths:
          - backend:
            serviceName: main
            servicePort: 80
    - host: www.test2.net
      http:
        paths:
          - path: "/page1"
            backend:
            serviceName: web1
            servicePort: 80
